[package]
name = "async-avr"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["lights0123 <developer@lights0123.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
avr-hal-generic = { git = "https://github.com/Rahix/avr-hal" }
arduino-uno = { git = "https://github.com/Rahix/avr-hal" }
atmega328p-hal = { git = "https://github.com/Rahix/avr-hal" }
avr-device = "0.2.2"
pin-utils = "0.1.0"
futures-util = { version = "0.3.5", default-features = false, features = ["async-await-macro"] }
ufmt = "0.1.0"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
